--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
          >
         <activity
             android:name="com.example.activity.MainActivity"
+            android:theme="@android:style/Theme.Light"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
